--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.2.2"
+    "swr": "^1.2.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "prettier": "2.6.0",
