--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": [
+        "next/core-web-vitals",
+        "plugin:import/typescript"
+    ],
+    "plugins": ["import"],
+    "settings": {
+        "import/resolver": {
+            "typescript": {}
+        }
+    }
 }
