--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
@@ -25,8 +26,8 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-plugin-import": "^2.25.4",
-    "sass": "^1.49.9",
     "prettier": "2.6.0",
+    "sass": "^1.49.9",
     "typescript": "4.6.2"
   }
 }
