--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
+    "mongodb": "^4.4.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.2.2",
-    "uuid": "^8.3.2"
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
